# xfce-dynamic-workspaces

./: Cargo.toml  README.md  TODO  build.rs
.github/workflows/: release.yml
src/: main.rs  notify.rs  wmctrl.rs  wnck.rs
