[package]
name = "xfce-dynamic-workspace"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
build = "build.rs"

[dependencies]
glib-sys = "0.8.0"
glib = "0.18.5"
wnck-sys = "0.1.0"
gtk4 = "0.9.7"
gtk-sys = "0.18.2"
gdk-sys = "0.18.2"
gtk = "0.18"
gobject-sys = "0.8.0"

[profile.release]
lto = "fat"
